--- a/sass/sections/_intro.scss
+++ b/sass/sections/_intro.scss
@@ -11,7 +11,7 @@
     height: calc(100% - 46px);
 
     @media (max-width: 917px) {
-        height: calc(100% - 46px);
+        height: 100%;
     }
 
     #title {
